--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando ambiente Desarrollo
 configuracion.autor.nombre=Kevin Argueta Barillas
-configuracion.autor.email=kjarguetab@gmail.com 
+configuracion.autor.email=kargueta@osigu.com
