--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
 spring.datasource.username=postgres
 spring.datasource.password=kev1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgresSQL95Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 #SIRVE PARA DEFINIR SI SE GENERA LA DATA Y CREA TABLAS 
 spring.jpa.hibernate.ddl-auto=create
 
