--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimezone=America/Guatemala&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=kev1234
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #SIRVE PARA DEFINIR SI SE GENERA LA DATA Y CREA TABLAS 
